--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Drawing Tools</title>
+    <title>Perimeter</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="perimeter.css">
     <script src="perimeter.js"></script>
-    <style>
-      #map {
-        height: 100%;
-      }
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
   </head>
   <body>
-    <div>
-      <button id="btnPronto">Concluir</button>
-      <button id="btnPolygon">Novo</button>
+    <div class="container">
+      <button id="btnConcluded">Concluir</button>
+      <button id="btnNew">Novo</button>
     </div>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVjApfZzZakbJwTFKDRb8sn7CbinC6Pf4&libraries=drawing&callback=initMap"
