--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <button id="btnConcluded">Concluir</button>
       <button id="btnNew">Novo</button>
+      <button id="btnDeleteSelected">Deletar</button>
     </div>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVjApfZzZakbJwTFKDRb8sn7CbinC6Pf4&libraries=drawing&callback=initMap"
